stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
