stirling-pdf/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: stirling-pdf-gateway
  namespace: stirling-pdf
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: stirling-pdf-cert
      hosts:
        - pdftools.gwg313.xyz
